--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronometro</title>
+    <link rel="stylesheet" href="./estilo/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Cronometro JS</h1>
+        <div class="main">
+            <p>Resultado</p>
+            <button>Start</button>
+            <button>Stop</button>
+            <button>Reset</button>
+        </div>
+    </div>
 </body>
 </html>
